ui: alignment fixes (#3395)
- Moved some recently made CSS changes (46a3279 / 2020bfb) to their newly introduced respective SCSS files
- Aligned the dashboard containers properly (see screenshots 1 and 2)
- Restored the original quick view tooltip background color (see screenshots 3 and 4)
- Fixed the height of the toolbar in dialog views and also stretched it in width (see screenshots 5 and 6

--- a/ui/css/src/scss/components/multi-wizzard.scss
+++ b/ui/css/src/scss/components/multi-wizzard.scss
@@ -670,11 +670,11 @@
   margin-top: 9px !important;
 }
 
-.multi-wizard.instance-wizard .custom-disk-size .select-container {
+.multi-wizard.instance-wizard .custom-slider-container .select-container {
   height: 279px;
 }
 
-.multi-wizard.instance-wizard .custom-disk-size .select-container {
+.multi-wizard.instance-wizard .custom-slider-container .select-container {
   height: 213px;
   margin: -7px 6px 0 8px;
   /*+border-radius:6px;*/
@@ -773,7 +773,11 @@
   font-size: 10px;
 }
 
-.instance-wizard .step.data-disk-offering.custom-disk-size .select-container {
+.instance-wizard .step.data-disk-offering.custom-slider-container .select-container {
+  height: 272px;
+}
+
+.instance-wizard .step.service-offering.custom-slider-container .select-container {
   height: 272px;
 }
 
@@ -781,11 +785,15 @@
   height: 240px;
 }
 
-.instance-wizard .step.data-disk-offering.custom-disk-size.custom-iops-do .select-container {
+.instance-wizard .step.data-disk-offering.custom-slider-container.custom-iops-do .select-container {
   height: 176px;
 }
 
-.instance-wizard .step.data-disk-offering.required.custom-disk-size .select-container {
+.instance-wizard .step.service-offering.required.custom-slider-container .select-container {
+  height: 315px;
+}
+
+.instance-wizard .step.data-disk-offering.required.custom-slider-container .select-container {
   height: 315px;
 }
 
@@ -793,7 +801,7 @@
   height: 295px;
 }
 
-.instance-wizard .step.data-disk-offering.required.custom-disk-size.custom-iops-do .select-container {
+.instance-wizard .step.data-disk-offering.required.custom-slider-container.custom-iops-do .select-container {
   height: 223px;
 }
 
@@ -2209,7 +2217,6 @@
 div.toolbar,
 .multi-wizard.zone-wizard .select-container .field .select-array-item {
   display: block;
-  height: 1px;
 }
 
 div.toolbar:after,
